--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
 
+
+    <!-- ========================================================== -->
+    <!-- ====== BLOCCO DI CODICE DA AGGIUNGERE ====================== -->
+    <!-- ========================================================== -->
+    <div id="auth-container" style="padding: 10px; text-align: center; background-color: #f0f0f0;">
+        <div id="user-info" style="display:none;">
+            <p>Ciao, <span id="user-name"></span>!</p>
+            <button id="logout-btn">Esci</button>
+        </div>
+        <button id="login-btn">Accedi con Google</button>
+    </div>
+    <!-- ========================================================== -->
+    <!-- ========================================================== -->
+
+
+    
+        <!-- ...tutto il resto della tua scheda... -->
     <div class="container">
 
         <!-- VISTA 1: SELEZIONE GIORNO -->
@@ -128,25 +145,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore-compat.js"></script>
 
-<script>
-  // La TUA configurazione del progetto Firebase (presa dal tuo screenshot)
-  const firebaseConfig = {
-    apiKey: "AIzaSyAP7t7sIq_IQB-R2ZYoSrBdFOCJiN3kifE",
-    authDomain: "scheda-palestra-app.firebaseapp.com",
-    projectId: "scheda-palestra-app",
-    storageBucket: "scheda-palestra-app.firebaseapp.com",
-    messagingSenderId: "72763855410",
-    appId: "1:72763855410:web:280b8c2902f7bb60f2a22b",
-    measurementId: "G-LZBSX8FSPN"
-  };
 
-  // Inizializza Firebase
-  firebase.initializeApp(firebaseConfig);
-
-  // Rendi disponibili i servizi di Firebase per il tuo script.js
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
 
 <!-- =============================================================== -->
     <script src="script.js" defer></script>
